--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "s3-upload-direct",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yogya",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1204.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
